--- a/views/map/index.ejs
+++ b/views/map/index.ejs
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/static/assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/assets/libs/tabler/style.min.css">
+    <link rel="stylesheet" href="/static/assets/css/alert.css">
     <link rel="stylesheet" href="/static/assets/css/background.css">
+    <link rel="stylesheet" href="/static/assets/libs/animate/animate.min.css">
     <link rel="stylesheet" href="/static/assets/css/map.css">
     <link rel="stylesheet" href="/static/assets/libs/leaflet/leaflet.css">
     <script src="/static/assets/libs/leaflet/leaflet.js"></script>
@@ -64,7 +66,7 @@
                                 <% if(!user.isBSFR) { %>
                                 <div class="alert alert-danger" role="alert">
                                     Vous devez être membre du serveur Discord BSFR afin de pouvoir visualiser la carte interactive.<br>
-                                    Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= process.env.DISCORD_INVITATION_URL %>" target="_blank"><%= process.env.DISCORD_INVITATION_URL %></a><br>
+                                    Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= inviteUrl %>" target="_blank"><%= inviteUrl %></a><br>
                                     <i>Actualisez la page après avoir rejoint le serveur Discord pour voir la carte.</i>
                                 </div>
                                 <% } %>
@@ -85,5 +87,6 @@
     <% if(user.isBSFR) { %>
     <script src="/static/assets/js/map.js"></script>
     <% } %>
+    <% if(login_success !== null) { %><script>showAlert(<%= login_success %>, '<%= login_success ? 'Connexion réussie' : 'Connexion échouée' %>')</script><% } %>
 </body>
 </html>
