Ajout du pourcentage de progression de l'upload du fichier

--- a/views/mpov/index.ejs
+++ b/views/mpov/index.ejs
@@ -181,8 +181,8 @@
                 <div class="modal-body text-center py-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-blue icon-lg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2"></path><polyline points="7 9 12 4 17 9"></polyline><line x1="12" y1="4" x2="12" y2="16"></line></svg>
                     <h3>Envoi d'une run</h3>
-                    <div id="upload-status" class="text-muted mb-2"></div>
-                    <div class="progress">
+                    <span id="upload-status" class="text-muted"></span><span class="text-muted ms-2" id="upload-percent"></span>
+                    <div class="progress mt-2">
                         <div class="progress-bar" id="upload-progress" style="width: 0%" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
