Ajout du fichier de configuration pour Camera2

--- a/views/mpov/index.ejs
+++ b/views/mpov/index.ejs
@@ -112,7 +112,7 @@
                                 <div class="col-12 col-lg-6">
                                     <h4>Critères à respecter :</h4>
                                     <ul>
-                                        <li>Utiliser la configuration Camera2 fournie (obligatoire)</li>
+                                        <li>Utiliser la <a href="/static/files/multipov.json" download>configuration Camera2 fournie</a> (obligatoire)</li>
                                         <li>Enregistrez en 1080p (minimum) 60fps</li>
                                         <li>Jouez sans aucun HUD (jeu, tchat Twitch, etc...)</li>
                                         <li>Mode replay non autorisé</li>
