Possibilité de renseigner des liens Beat Leader en plus de Score Saber

--- a/views/run/index.ejs
+++ b/views/run/index.ejs
@@ -95,13 +95,13 @@
                                     <small class="form-hint">Artiste - Nom de la map, Difficulté, Précision, FC/Miss</small>
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label required">Profil ScoreSaber</label>
-                                    <input type="text" class="form-control" id="scoresaber_profil" placeholder="https://scoresaber.com/u/76561198796531407" required>
+                                    <label class="form-label required">Profil ScoreSaber ou BeatLeader</label>
+                                    <input type="text" class="form-control" id="leaderboard_profil" placeholder="https://scoresaber.com/u/76561198796531407" required>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label required">Leaderboard de la map</label>
-                                    <input type="text" class="form-control" id="scoresaber_leaderboard" placeholder="https://scoresaber.com/leaderboard/6286" autocomplete="off" required>
-                                    <small class="form-hint">Ajoutez le lien ScoreSaber de la map que vous avez joué dans votre vidéo</small>
+                                    <input type="text" class="form-control" id="map_leaderboard" placeholder="https://scoresaber.com/leaderboard/6286" autocomplete="off" required>
+                                    <small class="form-hint">Ajoutez le lien ScoreSaber ou BeatLeader de la map que vous avez joué dans votre vidéo</small>
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label required">Lien BeatSaver</label>
