--- a/views/forms/run/mpov.ejs
+++ b/views/forms/run/mpov.ejs
@@ -35,6 +35,10 @@
                             </div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                            <% if(user.isAdmin) { %>
+                            <a href="/admin/" class="dropdown-item">Administration</a>
+                            <% } %>
+                            <div class="dropdown-divider"></div>
                             <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
                         </div>
                       </div>
