--- a/views/forms/run/youtube.ejs
+++ b/views/forms/run/youtube.ejs
@@ -11,15 +11,12 @@
     <link rel="stylesheet" href="/static/assets/libs/animate/animate.min.css">
     <title>Beat Saber FR - Soumission run YouTube</title>
 </head>
-<body class="" style="background: none;">
+<body class="">
     <div class="background"><div class="blur"></div></div>
 
     <div class="page">
         <header class="navbar navbar-expand-md navbar-dark sticky-top d-print-none">
             <div class="container-xl">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <h1 class="navbar-brand d-none-navbar-horizontal pe-0 pe-md-3">
                     <a href="/">
                         <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2">
