--- a/views/admin/twitchChannels.ejs
+++ b/views/admin/twitchChannels.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/assets/libs/animate/animate.min.css">
     <title>Beat Saber FR - Chaînes Twitch</title>
 </head>
-<body class="" style="background: none;">
+<body class="">
     <div class="background"><div class="blur"></div></div>
 
     <div class="page">
