--- a/views/errors/403.ejs
+++ b/views/errors/403.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/static/assets/css/background.css">
     <title>Beat Saber FR - Vous n'êtes pas autorisé à accéder à cette page</title>
 </head>
-<body class="d-flex flex-column" style="background: none;">
+<body class="d-flex flex-column">
     <div class="background"><div class="blur"></div></div>
 
     <div class="page page-center">
