--- a/views/map.ejs
+++ b/views/map.ejs
@@ -14,15 +14,12 @@
     <script src="/static/assets/libs/leaflet/leaflet.js"></script>
     <title>Beat Saber FR - Carte interactive</title>
 </head>
-<body class="" style="background: none;">
+<body class="">
     <div class="background"><div class="blur"></div></div>
 
     <div class="page">
         <header class="navbar navbar-expand-md navbar-dark sticky-top d-print-none">
             <div class="container-xl">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <h1 class="navbar-brand d-none-navbar-horizontal pe-0 pe-md-3">
                     <a href="/">
                         <img src="/static/assets/images/logo.gif" width="32" height="32" alt="BSFR" class="navbar-brand-image me-2">
@@ -38,6 +35,10 @@
                             </div>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                            <% if(user.isAdmin) { %>
+                            <a href="/admin/" class="dropdown-item">Administration</a>
+                            <div class="dropdown-divider"></div>
+                            <% } %>
                             <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
                         </div>
                       </div>
