Ajout des identifiants pour les mots bannis et les messages d'anniversaire

--- a/views/admin/bannedWords.ejs
+++ b/views/admin/bannedWords.ejs
@@ -41,6 +41,7 @@
                                 <table class="table table-vcenter table-responsive">
                                     <thead>
                                         <tr>
+                                            <th>#</th>
                                             <th>Mot banni</th>
                                             <th>Ajouté par</th>
                                             <th>Date d'ajout</th>
@@ -49,6 +50,7 @@
                                     <tbody>
                                         <% for(const word of bannedWords) { %>
                                         <tr>
+                                            <td><%= word.id %></td>
                                             <td><%= word.word %></td>
                                             <td>
                                                 <div class="d-flex align-items-center">
